updated jenkins file